--- a/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
@@ -405,15 +405,15 @@ limitations under the License.
 																				class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect btn-primary " alt="Create New License" title="Create New License">
 																				Create New</button>
 																		    </div>
-																		    <div ng-if="licenseOption=='selectLicProfile' && allTemplates" class="dc-row">
-																			    <div class="select-control mdl-cell mdl-cell--6-col mdl-cell--6-col-tablet mdl-cell--6-col-phone">
-																			    <md-select ng-model="$parent.selectedLicense">
+																		    <div ng-if="licenseOption=='selectLicProfile' && allTemplates" class="dc-row" style="padding: 0">
+																			    <div class="select-control mdl-cell mdl-cell--6-col mdl-cell--6-col-tablet mdl-cell--6-col-phone" style="margin: 8px 0; padding: 0 6px 0 0">
+																			    <md-select ng-model="$parent.selectedLicense" placeholder="Select...">
 																			    	<md-option value="{{$index}}" ng-repeat='template in allTemplates'>{{template.templateName}}</md-option>
 																				</md-select>
 																				</div>
 																				<div class="mdl-cell mdl-cell--6-col mdl-cell--6-col-tablet mdl-cell--6-col-phone">
-																				 <button ng-click="modifyLicenseProfileTemplate($event, false)"					
-																					class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect btn-primary " alt="Modify License" title="Modify License">
+																				 <button ng-click="modifyLicenseProfileTemplate($event, false)"	ng-disabled="$parent.selectedLicense==-1"
+																				 	class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect btn-primary " alt="Modify License" title="Modify License">
 																				Modify</button>
 																		    	</div>
 																		    </div>
@@ -511,7 +511,7 @@ limitations under the License.
 								
 								<div class="onboardbtn">
 									<button ng-click="addToCatalog()"
-										 ng-disabled= "! (file && fileSubmit) || ( disableOnboardingButton == true ) || modelUploadError || modelLicUploadError || ( $root.isOnnxOrPFAModel && !modelName ) || (!(licensefile && fileSubmitLicense))"
+										 ng-disabled= "! (file && fileSubmit) || ( disableOnboardingButton == true ) || modelUploadError || modelLicUploadError || ( $root.isOnnxOrPFAModel && !modelName ) || (licenseOption=='Upload' && !(licensefile && fileSubmitLicense)) || (licenseOption=='selectLicProfile' && selectedLicense == -1)"
 										class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect btn-primary " alt="Add to Catalog" title="Add to Catalog">
 										On-board Model</button>
 										<button ng-click="clearExistingNotifications(); $root.isOnnxOrPFAModel = false"
