--- a/acumos-portal-fe/src/main/webapp/app/onboarding-history/onboarding-history.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/onboarding-history/onboarding-history.template.html
@@ -62,12 +62,12 @@ limitations under the License.
 			class="mdl-data-table mdl-js-data-table mdl-shadow--2dp admin-tbl1" style="table-layout: fixed;">
 			<colgroup>
 				<col width="15%">
-				<col width="10%">
+				<col width="11%">
 				<col width="20%">
 				<col width="20%">
 				<col width="15%">
 				<col width="10%">
-				<col width="10%">
+				<col width="9%">
 			</colgroup>
 			<thead >
 				<tr>
@@ -117,7 +117,7 @@ limitations under the License.
 				</tr>
 			</thead>
 			<tbody> 
-				<tr ng-repeat="Task in allOnBoardingHistoryTaskList | filter : searchOnHistoryList | orderBy:orderByField:reverseSort" >						
+				<tr ng-repeat="Task in allOnBoardingHistoryTaskList | orderBy:orderByField:reverseSort | filter : searchOnHistoryList as filteredHistory" >						
 					<td><span class="md-breadcrumb-item">{{Task.modelName}}</span></td>
 					<td>{{Task.taskCode}}</td>			
 					<td><span class="md-breadcrumb-item"> {{Task.solutionId}}</span></td>
@@ -138,9 +138,9 @@ limitations under the License.
 			</tbody>
 		</table>
 		<div class="alert c-info text-center"
-				ng-show="CheckallOnBoardingHistoryTaskList == 0">
-				<strong>No Result Found</strong>
-			</div>
+			ng-show="CheckallOnBoardingHistoryTaskList == 0 || filteredHistory.length < 1">
+			<strong>No Result Found</strong>
+		</div>
 	</div>
 	<!-- table end -->
 	
