--- a/acumos-portal-fe/src/main/webapp/app/publish-request/md-publish-request.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/publish-request/md-publish-request.template.html
@@ -140,7 +140,7 @@ limitations under the License.
 				</thead>
 				<tbody><!-- (filtertedUser = (allPublishRequest | orderBy:orderByField:reverseSortPbReq | filter : search) ) -->
 
-					<tr ng-repeat="publishReq in allPublishRequest | orderBy:orderByField:reverseSortPbReq | filter : searchPublishRequest">
+					<tr ng-repeat="publishReq in allPublishRequest | orderBy:orderByField:reverseSortPbReq | filter : searchPublishRequest as allPublishRequestFiltered">
 						<td ng-class="{'disabled': publishReq.requestStatusName !== 'Pending'}"><a ui-sref="marketSolutions({solutionId:publishReq.solutionId,revisionId:publishReq.revisionId,publishRequestId:publishReq.publishRequestId,requestUserId:publishReq.requestUserId,requestStatusCode:publishReq.requestStatusCode})"><label class="model-name">{{publishReq.solutionName}}</label></a>
 							<label class="small">{{publishReq.solutionId}}</label></td>
 						<td ng-class="{'disabled': publishReq.requestStatusName !== 'Pending'}"><label>{{publishReq.revisionName}}</label> <label
@@ -212,10 +212,9 @@ limitations under the License.
 				</tbody>
 			</table>
 			<div class="alert c-info text-center"
-				ng-show="allPublishRequest.length == 0">
+				ng-if="allPublishRequestFiltered.length == 0 || allPublishRequest == '' ">
 				<strong>No Result Found</strong>
 			</div>
-
 			<!-- Modal box for approve and reject publish request -->
 			<div class="md-dialog-container" id="publishRequestModal"
 				style="height: 0;">
