License tab should be License profile tab
Issue-ID: ACUMOS-3587
Description: Model Preview - License tab should be License profile tab

Change-Id: I03e07bfda0073e19deae4dea0f469fbfc0015085
Signed-off-by: Shaik Ghannubee <SG00587246@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/model-edit/md-model-edit-workflow.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/model-edit/md-model-edit-workflow.template.html
@@ -1800,7 +1800,7 @@ limitations under the License.
 																				</a><a href="#tab7-panel" class="mdl-tabs__tab" alt="License" title="License">
 																					<span class="tab-box"> 
 																						<span class="tab-icons tab-license"></span>
-																						<span>License</span>
+																						<span>License Profile</span>
 																					</span>
 																				</a> <a href="#tab2-panel" class="mdl-tabs__tab" alt="Signature" title="Signature"> <span
 																					class="tab-box"> <span
@@ -1858,7 +1858,7 @@ limitations under the License.
 
 																			</div>
 																			<div class="mdl-tabs__panel" id="tab7-panel">
-																				<h6 class="sectiontitle6">LICENSE</h6>
+																				<h6 class="sectiontitle6">LICENSE PROFILE</h6>
 																				<div ng-show= "modelLicense">
 																					<pre class="wrap" ng-if="!isLicenseJson && modelLicense">{{modelLicense}}</pre>
 																					<pre class="wrap" ng-if="isLicenseJson && modelLicense">{{modelLicense | json: 4}}</pre>
