On-Boarding History Pipe changes
Change-Id: Idfb7340e60a7d9612a4d66fac9447f59a0a6293c
Issue-Id: ACUMOS-3571
Description: On-Boarding History In progress text need to display in orange color and in the status field space is missing in In Progress
Signed-off-by: mcapraful <PD00618320@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/onboarding-history/onboarding-history.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/onboarding-history/onboarding-history.template.html
@@ -235,7 +235,7 @@ limitations under the License.
 			<div>
 				<label>Revision Id: </label>{{revId}}
 			</div>
-			<div class="createdon">Created | On: {{modDate | date :  "MM/dd/yyyy h:mm a"}}</div>
+			<div class="createdon">Created | On: {{modDate | date :  "MM/dd/yyyy | h:mm a"}}</div>
 		</div>
 		<div>
 			<label>Solution Id: </label>{{solId}}
