--- a/acumos-portal-fe/src/main/webapp/app/notification/notification-details.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/notification/notification-details.template.html
@@ -126,7 +126,7 @@ limitations under the License.
 					</tr>
 					<div class="alert c-info margin-b2 text-center"
 						ng-if="!filtertedNotification.length">
-						<strong>No Result found</strong>
+						<strong>No Results found</strong>
 					</div>
 				</tbody>
 			</table>
