--- a/acumos-portal-fe/src/main/webapp/app/onboarding-history/onboarding-history.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/onboarding-history/onboarding-history.template.html
@@ -139,7 +139,7 @@ limitations under the License.
 		</table>
 		<div class="alert c-info text-center"
 			ng-show="CheckallOnBoardingHistoryTaskList == 0 || filteredHistory.length < 1">
-			<strong>No Result Found</strong>
+			<strong>No Results Found</strong>
 		</div>
 	</div>
 	<!-- table end -->
