--- a/acumos-portal-fe/src/main/webapp/app/publish-request/md-publish-request.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/publish-request/md-publish-request.template.html
@@ -213,7 +213,7 @@ limitations under the License.
 			</table>
 			<div class="alert c-info text-center"
 				ng-if="allPublishRequestFiltered.length == 0 || allPublishRequest == '' ">
-				<strong>No Result Found</strong>
+				<strong>No Results Found</strong>
 			</div>
 			<!-- Modal box for approve and reject publish request -->
 			<div class="md-dialog-container" id="publishRequestModal"
