--- a/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
@@ -302,7 +302,7 @@ limitations under the License.
 								  <div class="mdl-cell mdl-cell--8-col mdl-cell--5-col-tablet mdl-cell--4-col-phone upload-model-bundle-left">
 								  	<div class="mdl-grid mdl-grid--no-spacing deploy-grid add-document">
 																	<form class="ng-pristine ng-valid" name="onboardingForm">
-																		<h5>Upload Model Bundle<sup>*</sup></h5>
+																		<h5>Upload Model Bundle<sup class="red">*</sup></h5>
 																		<div
 																			class="mdl-textfield mdl-js-textfield mdl-textfield--file has-placeholder is-upgraded upload-image-input"
 																			data-upgraded=",MaterialTextfield">
@@ -394,7 +394,7 @@ limitations under the License.
 																			</div>
 																		</div>
 																		<div id="modelName" class="upload-model-bundle-left">																							
-																			<h5>License Profile<sup>*</sup></h5>
+																			<h5>License Profile<sup class="red">*</sup></h5>
 																			<div id="modelName">
 																			<md-radio-group ng-model="licenseOption" id="licenseOption"  ng-change="modelLicUploadError=false">
 																		      <md-radio-button value="Upload">Upload</md-radio-button>
@@ -663,7 +663,7 @@ limitations under the License.
 
 								
 										<div id="modelName">																							
-												<span>License Profile<sup>*</sup></span>
+												<span>License Profile<sup class="red">*</sup></span>
 												<div id="modelName">
 												<md-radio-group ng-model="licenseOption" id="licenseOption"  ng-change="modelDocLicUploadError=false;">
 											      <md-radio-button value="Upload">Upload</md-radio-button>
