Onboarding CSS change
Issue-ID: ACUMOS-3533,ACUMOS-3611
Description:  <IST2> View on-boarding history screen should have sorting
icon for tabulation field.
Description: Portal - Dropdown missing left border.

Change-Id: Ica77a9ddf78bf68835e928208c759c1ae4b41a14
Signed-off-by: Sovit <SS00507275@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/onboarding-history/onboarding-history.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/onboarding-history/onboarding-history.template.html
@@ -57,9 +57,9 @@ limitations under the License.
 </section>
 <div class="onboard-history">
 	<!-- table start -->
-	<div class="admin-grid-container">
+	<div class="admin-grid-container tbl-overflowscroll">
 		<table
-			class="mdl-data-table mdl-js-data-table mdl-shadow--2dp admin-tbl1" style="table-layout: fixed;">
+			class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
 			<colgroup>
 				<col width="15%">
 				<col width="11%">
@@ -139,7 +139,7 @@ limitations under the License.
 		</table>
 		<div class="alert c-info text-center"
 			ng-show="CheckallOnBoardingHistoryTaskList == 0 || filteredHistory.length < 1">
-			<strong>No Results Found</strong>
+			<strong>No Result Found</strong>
 		</div>
 	</div>
 	<!-- table end -->
