--- a/acumos-portal-fe/src/main/webapp/app/onboarding-history/onboarding-history.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/onboarding-history/onboarding-history.template.html
@@ -57,9 +57,9 @@ limitations under the License.
 </section>
 <div class="onboard-history">
 	<!-- table start -->
-	<div class="admin-grid-container">
+	<div class="admin-grid-container tbl-overflowscroll">
 		<table
-			class="mdl-data-table mdl-js-data-table mdl-shadow--2dp admin-tbl1" style="table-layout: fixed;">
+			class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
 			<colgroup>
 				<col width="15%">
 				<col width="11%">
