Fix overflow of catalog names in Fav Catalogs
Corrected issue where long catalog names (mainly those with long
stretches of underscores) would misalign and overlap with elements in
the Select Favorite Catalogs menu.

Issue-Id: ACUMOS-3613
Change-Id: Ib565982e88eec8a58f7fb5cbaa5a391b81434fc4
Signed-off-by: swood8 <SW0C74397@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/userDetail/userDetail.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/userDetail/userDetail.template.html
@@ -310,8 +310,8 @@ limitations under the License.
 				</div>
 				<div class="catalog-grid-bottom-section">
 					<div class="ct-item-row" >
-						<div class="posrel">
-							<label class="ct-lbl2">{{Catalog.name}}</label>
+						<div class="posrel" style="overflow: hidden;">
+							<label class="ct-lbl2" style="overflow: hidden; text-overflow: ellipsis; line-height: 1.3em;">{{Catalog.name}}</label>
 							 <label class="ct-lbl3">Published by: {{Catalog.publisher}}</label> 
 							 <label class="ct-lbl3">{{Catalog.created | date :"MM/dd/yyyy" }}</label>
 							  
