fix for error msg while uploading license
Change-Id: If1662765f4596b1792c7ec621da716d6cdd79766
ISSUE-ID: ACUMOS-3626
Description: <IST> Error is displaying when user is uploading valid license
Signed-off-by: BelagamSrividya <BS00561090@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
@@ -472,7 +472,7 @@ limitations under the License.
 							<button ng-disabled="editModel || isLoadingLicense || isLicenseFound==false"  class="mdl-button pull-right mdl-js-button mdl-js-ripple-effect btn-secondary-small" ng-click="modifyLicenseProfileTemplate($event, true)">
 	                              Update
 							</button>
-							<button ng-disabled="editModel || isLoadingLicense || isLicenseFound==false || changeLicense"  class="mdl-button pull-right mdl-js-button mdl-js-ripple-effect btn-secondary-small" ng-click="changeLicense=true">
+							<button ng-disabled="editModel || isLoadingLicense || isLicenseFound==false || changeLicense"  class="mdl-button pull-right mdl-js-button mdl-js-ripple-effect btn-secondary-small" ng-click="changeLicense=true;modelUploadErrorMsg='';file = '';filename = ''">
 	                              Change
 							</button>							
 						</div>	
