Changes for Subscription related Issue
Change-Id: Icab26a1a68bd6053b2b8cea3ca8faa1c9db91274
Issue-ID: ACUMOS-3452.
Description:  IST2 - Unable to create a subscription.
Signed-off-by: Sovit <SS00507275@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/Admin/admin.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/Admin/admin.template.html
@@ -2882,11 +2882,11 @@ limitations under the License.
 
 								<tbody>
 									<tr>
-										<td><span class="md-breadcrumb-item">{{allCatalogList.name}}</span></td>
+										<td><span class="md-breadcrumb-item">{{CatalogSendDeatils.name}}</span></td>
 										<td><span class="md-breadcrumb-item">
-												{{allCatalogList.accessTypeCode == "PB" ? "Public" :
-												allCatalogList.accessTypeCode == "RS" ? "Restricted" : "" }}</span></td>
-										<td><span class="md-breadcrumb-item">{{allCatalogList.description}}</span></td>
+												{{CatalogSendDeatils.accessTypeCode == "PB" ? "Public" :
+												CatalogSendDeatils.accessTypeCode == "RS" ? "Restricted" : "" }}</span></td>
+										<td><span class="md-breadcrumb-item">{{CatalogSendDeatils.description}}</span></td>
 									</tr>
 								</tbody>
 							</table>
