Micro-services checkbox enable on upload new model
Issue-ID: ACUMOS-3633
Description: micro-services check-box enabled on upload new model

Change-Id: I6091ffa36e77cdcc9d8bf881851a3d4203276a5e
Signed-off-by: Shaik Ghannubee <SG00587246@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
@@ -514,7 +514,7 @@ limitations under the License.
 										 ng-disabled= "! (file && fileSubmit) || ( disableOnboardingButton == true ) || modelUploadError || modelLicUploadError || ( $root.isOnnxOrPFAModel && !modelName ) || (licenseOption=='Upload' && !(licensefile && fileSubmitLicense)) || (licenseOption=='selectLicProfile' && (!licensefile || selectedLicense == -1))"
 										class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect btn-primary " alt="Add to Catalog" title="Add to Catalog">
 										On-board Model</button>
-										<button ng-click="clearExistingNotifications(); $root.isOnnxOrPFAModel = false"
+										<button ng-click="clearExistingNotifications(); $root.isOnnxOrPFAModel = false;  $root.isMicroserviceEnabled = true;"
 										 ng-disabled= "!(stepfailed == true || allSuccess == true) || (disableRefreshButton == true)" 
 										class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect btn-primary " alt="Add to Catalog" title="Add to Catalog">
 											Upload New</button>
