--- a/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/model-details/md-model-details.template.html
@@ -500,9 +500,9 @@ limitations under the License.
 									class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect btn-primary " alt="Create New License" title="Create New License">
 									Create New</button>
 									
-								<div ng-if="licenseOption=='selectLicProfile' && allTemplates" class="license-detail-form mdl-grid" style="padding: 0">
+								<div ng-if="licenseOption=='selectLicProfile' && allTemplates" class="license-detail-form mdl-grid">
 								    <div class="select-control mdl-cell mdl-cell--6-col mdl-cell--6-col-tablet mdl-cell--6-col-phone" style="margin: 8px 0; padding: 0 6px 0 0">
-									    <md-select ng-model="$parent.selectedLicense" placeholder="Select...">
+									    <md-select ng-model="$parent.selectedLicense" placeholder="Select">
 									    	<md-option value="{{$index}}" ng-repeat='template in allTemplates'>{{template.templateName}}</md-option>
 										</md-select>
 									</div>
