changes for maintained backuplogs
Change-Id: Ibd78f30f523bc1a6173b1db4d0f612d4c400462c
ISSUE-ID: ACUMOS-3557
Description: <IST2> <Portal Marketplace> Backup Logs /Archived Logs Issues
Signed-off-by: BelagamSrividya <BS00561090@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/Admin/admin.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/Admin/admin.template.html
@@ -1226,7 +1226,7 @@ limitations under the License.
 										<div class="c-alert c-warning static-position margin-backlog">
 											<div class="c-alert-inner"><span class="material-icons">report_problem</span>
 											<span class="alert-text">If you delete any repository from this page it will be
-											deleted permanently from the here.</span></div>
+											deleted permanently from here.</span></div>
 										</div>
 										<div class="fed-row1">
 												<div class="fedrow-cell1">
