--- a/acumos-portal-fe/src/main/webapp/app/catalog/manage-peer.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/catalog/manage-peer.template.html
@@ -47,7 +47,7 @@ limitations under the License.
 				</div>
 				<div class="fed-row2">
 					<button class="mdl-button mdl-js-button btn-primary"
-						ng-click="grantAccessDialog()" ng-disabled="availablePeers.length==0 || $parent.searchData.length == 0">Grant Peers Access</button>
+						ng-click="grantAccessDialog()" ng-disabled="availablePeers.length==0 || searchPeerDetails">Grant Peers Access</button>
 					<button class="mdl-button mdl-js-button btn-secondary btn-gap" ng-disabled="accessedPeers.length==0 || peersSelected.length == 0"
 						ng-click="removePeerDialog()">Remove</button>
 					<div class="fed-srch-container">
