Wrong sentence in Sign In pop-up
Issue-ID: ACUMOS-3370
Description:  Wrong sentence in Sign In pop-up
Change-Id: I4fd737d170f7c532717bc707f2c2832ca9e980da
Signed-off-by: Shaik Ghannubee <SG00587246@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/header/sign-in.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/header/sign-in.template.html
@@ -107,7 +107,7 @@ limitations under the License.
 										  		<button disabled class="mdl-button mdl-js-button mdl-js-ripple-effect socbtn" ng-click='signinAuthenticate("linkedin")' disabled alt="Sign In with LinkedIn" title="Sign In with LinkedIn"><span class="socbtnicon"><span class="linkedin-icon"></span></span><span class="soctext">Sign In with LinkedIn</span></button>
 										  	</div>
 										  	<p class="signintext">
-												By clicking on any of the buttons above you are agree with our <a ui-sref="termsCondition" ng-click="handleDismiss()">Terms and Conditions and Privacy Policy.</a>
+												By clicking on any of the buttons above you agree with our <a ui-sref="termsCondition" ng-click="handleDismiss()">Terms and Conditions and Privacy Policy.</a>
 											</p>
 										  </div>
 										</div>
