--- a/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/modular-resource/modular-resource.template.html
@@ -406,7 +406,8 @@ limitations under the License.
 																				Create New</button>
 																		    </div>
 																		    <div ng-if="licenseOption=='selectLicProfile' && allTemplates" class="license-detail-form dc-row" style="padding: 0">
-																			    <div class="select-control mdl-cell mdl-cell--6-col mdl-cell--6-col-tablet mdl-cell--6-col-phone" style="margin-left: 0; padding-left: 0;">
+																			    <div class="select-control mdl-cell mdl-cell--6-col mdl-cell--6-col-tablet mdl-cell--6-col-phone">
+
 																			    <md-select ng-model="$parent.selectedLicense" placeholder="Select">
 																			    	<md-option value="{{$index}}" ng-repeat='template in allTemplates'>{{template.templateName}}</md-option>
 																				</md-select>
@@ -664,6 +665,7 @@ limitations under the License.
 								
 										<div id="modelName">																							
 												<label>License Profile <sup class="reqfield"> *</sup></label>
+
 												<div id="modelName">
 												<md-radio-group ng-model="licenseOption" id="licenseOption"  ng-change="modelDocLicUploadError=false; licenseDocfile=false;">
 											      <md-radio-button value="Upload">Upload</md-radio-button>
@@ -676,8 +678,9 @@ limitations under the License.
 											    </div>
 											    <div ng-if="licenseOption=='selectLicProfile' && allTemplates" class="license-detail-form dc-row">
 											     
-												    <div class="select-control mdl-cell mdl-cell--6-col mdl-cell--6-col-tablet mdl-cell--6-col-phone" style="margin-left: 0; padding-left: 0;">
-												    <md-select ng-model="$parent.selectedLicense" placeholder="Select">
+
+												    <div class="select-control mdl-cell mdl-cell--6-col mdl-cell--6-col-tablet mdl-cell--6-col-phone">
+												    <md-select ng-model="$parent.selectedLicense">
 												    	<md-option value="{{$index}}" ng-repeat='template in allTemplates'>{{template.templateName}}</md-option>
 													</md-select>
 													</div>
